Use opacity (visibility) instead of toggling display for notifications to prevent jumping

--- a/pontoon/base/static/css/style.css
+++ b/pontoon/base/static/css/style.css
@@ -737,7 +737,7 @@ button {
 }
 
 #pontoon .notification.hidden {
-  display: block;
+  opacity: 0;
 }
 
 #pontoon .notification li {
