--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -371,10 +371,10 @@ mark.placeable {
 #pontoon > header .notification {
   background: rgba(0, 0, 0, 0.8);
   cursor: pointer;
-  display: none;
   list-style: none;
   margin: 0;
   max-width: 500px;
+  opacity: 0;
   padding: 10px;
   position: absolute;
   right: 15px;
